<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:layout="@layout/fragment_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/dimen_16"
    android:paddingEnd="@dimen/dimen_16"
    tools:context="com.generic.wallet.authfragments.RegisterFragment">

    <TextView
        android:id="@+id/createAnAccountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40"
        android:fontFamily="@font/quicksand_bold"
        android:text="@string/create_an_account"
        android:textColor="@color/bold_text_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/enterYourInfoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_8"
        android:fontFamily="@font/quicksand"
        android:text="@string/please_enter_your_info_to_continue_the_process"
        android:textColor="@color/bold_text_color"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/createAnAccountText" />

    <TextView
        android:id="@+id/loginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand_bold"
        android:textColor="@color/button_purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/dimen_40"
        />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/registerFragmentImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/desc"
        android:textSize="14sp"
        android:fontFamily="@font/quicksand"
        android:textColor="@color/lorem_color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/enterYourInfoText"
        android:layout_marginTop="@dimen/dimen_32"
        android:src="@drawable/createacpg"
        />

<!--    Full name-->
    <TextView
        android:id="@+id/enterPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_32"
        android:fontFamily="@font/quicksand_medium"
        android:text="@string/full_name"
        android:textColor="@color/above_edit_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/registerFragmentImage" />
    
    <EditText
        android:id="@+id/fullNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_full_name"
        app:layout_constraintTop_toBottomOf="@id/enterPassword"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/edit_text_hint_color"
        android:fontFamily="@font/quicksand"
        android:textSize="14sp"
        />

<!--    Mobile Number-->
    <TextView
        android:id="@+id/mobileNumberText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/quicksand_medium"
        android:text="Mobile Number"
        android:textColor="@color/above_edit_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fullNameEditText" />

    <EditText
        android:id="@+id/mobileNumberEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_mobile_number"
        app:layout_constraintTop_toBottomOf="@id/mobileNumberText"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/edit_text_hint_color"
        android:fontFamily="@font/quicksand"
        android:textSize="14sp"
        />
<!--    Email Address-->
    <TextView
        android:id="@+id/emailIdText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_24"
        android:fontFamily="@font/quicksand_medium"
        android:text="Mobile Number"
        android:textColor="@color/above_edit_text_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mobileNumberEditText" />

    <EditText
        android:id="@+id/emailIdEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_your_mobile_number"
        app:layout_constraintTop_toBottomOf="@id/emailIdText"
        android:layout_marginTop="@dimen/dimen_8"
        android:background="@drawable/edit_text_border"
        android:textColor="@color/edit_text_hint_color"
        android:fontFamily="@font/quicksand"
        android:textSize="14sp"
        />

<!--    Terms and Condition-->
    <TextView
        android:id="@+id/termsCondition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/emailIdEditText"
        android:layout_marginTop="@dimen/dimen_24"
        android:gravity="center"
        android:textSize="12sp"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/terms_condition_color"
        android:text="CONTINUE"
        android:fontFamily="@font/quicksand_bold"
        android:textSize="16sp"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@id/termsCondition"
        android:layout_marginTop="@dimen/dimen_32"
        />
</androidx.constraintlayout.widget.ConstraintLayout>